<resources>
    <string name="app_name">PokerHome</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="host_choose">Choose it if this device is the host</string>
    <string name="title_activity_game">Your cards</string>
    <string name="title_activity_settings">PokerHome Settings</string>
    <string name="btnnewhost">Host new party</string>
    <string name="btnnewclient">Join party</string>
    <string name="btnsetting">Setting</string>
    <string name="btnexit">Exit application</string>

    <string name="title_activity_table">Cards on table</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="action_tableview">Look at table</string>
    <string name="pref_host">Host</string>
    <string name="pref_host_summ">Choose if device is hosting the game</string>
    <string name="pref_ip">IP-address</string>
    <string name="pref_ip_summ">Enter the IP of host device</string>
    <string name="title_activity_start_game">startGame</string>
    <string name="start_btn">Start the party</string>
    <string name="get_ip_message">Type in the address of the server below.</string>
    <string name="join_btn">Join the party</string>
    <string name="pref_name_summ">This name is shown in the game</string>
    <string name="pref_name">Player name</string>
    <string name="pref_lang">Language</string>
    <string name="pref_lang_summ">Choose app language</string>
</resources>
